--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/test1
+url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT
 username=xiaoran
 password=123456
