--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.tomcat.uri-encoding=utf-8
 
 #数据库相关配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT
 spring.datasource.username=xiaoran
 spring.datasource.password=123456
 spring.datasource.max-idle=10
@@ -21,4 +21,7 @@ spring.datasource.initial-size=5
 
 #session生命周期
 server.servlet.session.timeout=30m
+
+spring.mvc.view.prefix=/WEB-INF/jsp
+spring.mvc.view.suffix=.jsp
 
