--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,6 @@ spring.datasource.initial-size=5
 #sessionÉúÃüÖÜÆÚ
 server.servlet.session.timeout=30m
 
-spring.mvc.view.prefix=/WEB-INF/jsp
+spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
